discussion/kv_engine/145802/145802_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44140: Make KVStore::getCollectionsManifest return status

Change-Id: Ibedcb0e5528f033a6063308890af20bc99da6361

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-02-17 16:23:01.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-17 16:51:03.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16642/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7150/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20: error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
            return false;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20: error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
            return false;
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7150/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7150/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33669/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1406): error C2440: "return": cannot convert from "bool" to "CouchKVStore::CompactDBInternalStatus" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33669/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28946/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28946/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7797/ : FAILURE

Compile error at [2021-02-17T16:26:59.480Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7797/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8882/ : FAILURE

Compile error at [2021-02-17T16:37:12.857Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot convert ?bool? to ?CouchKVStore::CompactDBInternalStatus? in return
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8882/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9090/ : FAILURE

Compile error at [2021-02-17T16:44:50.710Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9090/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8744/ : FAILURE

Compile error at [2021-02-17T16:42:19.090Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot convert ?bool? to ?CouchKVStore::CompactDBInternalStatus? in return
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8744/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5687/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
